# python-project-83

./: .codeclimate.yml  .env_example  .gitignore  Makefile  README.md  database.sql  pyproject.toml  todo.txt
.github/workflows/: pyci.yml
page_analyzer/: app.py  db_processor.py  locales.json  locales_loader.py  url_tools.py
page_analyzer/templates/: 404.html  base.html  index.html  url_id.html  urls.html
